--- a/demo/index.html
+++ b/demo/index.html
@@ -1,20 +1,33 @@
-<link rel="import" href="../t-data-feeder.html">
-<link rel="import" href="../../t-radio-group/t-radio-group.html">
-  
-<style>
-	.test{
-		margin:40px;
-	}
-</style>
-        <t-radio-group required label="Select one">
-          
-        </t-radio-group>
+<!doctype html>
 
-<div class="test">
-	
-<t-data-feeder id="x"></t-data-feeder>
-</div>
+<html>
+<head>
 
-<script>
-	document.querySelector('#x').target = document.querySelector('t-radio-group');
-</script>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1, user-scalable=yes">
+
+  <title>t-Button demo</title>
+
+  <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
+
+  <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,700,300' rel='stylesheet' type='text/css'>
+
+  <link rel="import" href="../t-data-feeder.new.html">
+
+  <style>
+  	body {
+  		font-family: 'Roboto Slab';
+  	}
+
+  	t-data-feeder {
+  		margin-top: 50px;
+  		background-color: rgb(255, 255, 141);
+  	}
+  </style>
+</head>
+<body>
+		<t-data-feeder></t-data-feeder>
+</body>
+</html>
+
