--- a/demo/index.html
+++ b/demo/index.html
@@ -7,25 +7,25 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1, user-scalable=yes">
 
-  <title>t-Button demo</title>
+  <title>t-data-list demo</title>
 
   <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
 
   <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,700,300' rel='stylesheet' type='text/css'>
-  <link rel="import" href="../t-data-feeder.new.html">
+  <link rel="import" href="../t-data-list.html">
   <style>
   	body {
   		font-family: 'Roboto Slab';
   	}
 
-  	t-data-feeder {
+  	t-data-list {
   		margin-top: 50px;
   		background-color: rgb(255, 255, 141);
   	}
   </style>
 </head>
 <body>
-		<t-data-feeder></t-data-feeder>
+		<t-data-list></t-data-list>
 </body>
 </html>
 
