style(placeholder): Add placeholder color variable
[ci skip]

--- a/t-data-feeder.html
+++ b/t-data-feeder.html
@@ -13,6 +13,7 @@
 
             t-data-list {
                 margin-top: 10px;
+                --placeholder-color: rgba(100, 100, 100, 0.5);
             }
         </style>
         <label>{{label}}</label>
