--- a/t-data-list.html
+++ b/t-data-list.html
@@ -39,7 +39,7 @@
 				left: 0;
 				right: 0;
 				bottom: 0;
-				color: rgba(100, 100, 100, 0.9);
+				color: var(--placeholder-color, rgba(100, 100, 100, 0.9));
 			}
 
 			.item iron-icon {
